# dodgylegally

./: .gitignore  CLAUDE.md  README.md  compose_reverse_reveal.py  compose_spectral_morph.py  compose_word_scatter.py  confetti_compose.py  pyproject.toml  tornado_assemble.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: case-study-confetti-tornado.md  case-study-making-a-beat-from-nothing.md  case-study-skipping-rope.md  case-study-super-tight.md
docs/plans/: 2026-02-01-cli-refactor-design.md  2026-02-01-cli-refactor-plan.md  2026-02-01-enhancements-design.md  2026-02-01-enhancements-plan.md
src/dodgylegally/: __init__.py  analyze.py  cli.py  clip.py  combine.py  config.py  download.py  logging_config.py  looping.py  metadata.py  process.py  search.py  stems.py  transcript.py  transform.py  ui.py  wordlist.txt
src/dodgylegally/effects/: __init__.py  base.py  builtin.py
src/dodgylegally/presets/: ambient.yaml  chaotic.yaml  default.yaml  percussive.yaml
src/dodgylegally/sources/: __init__.py  base.py  local.py  youtube.py
src/dodgylegally/strategies/: __init__.py  base.py  builtin.py  templates.py
src/dodgylegally/templates/: ambient-drift.yaml  build-and-drop.yaml  chaos.yaml  rhythmic-collage.yaml  spoken-word-reveal.yaml
tests/: test_analyze.py  test_bpm_looping.py  test_cli.py  test_cli_ui_integration.py  test_clip.py  test_combine.py  test_config.py  test_download.py  test_effects.py  test_local_source.py  test_logging.py  test_metadata.py  test_process.py  test_resilience.py  test_search.py  test_sources.py  test_stems.py  test_strategies.py  test_templates.py  test_transcript.py  test_transform.py  test_ui.py  test_weighted_sources.py
